--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,41 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+h1 {
+  font-family: var(--font-press-start-2p) !important;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+h2, h3, h4, h5, h6 {
+  font-family: var(--font-chakra-petch) !important;
+  font-weight: 600; 
+} 
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-handjet);
+  font-weight: 400; 
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+
+body {
+  background-color: #18181b;
+  background-image: url("/image.png");
+  background-size: 200px 200px;
+  background-position: 0 0;
+}
+
+.path {
+  stroke-dasharray: 500px 100px;
+  animation: animate 100s linear infinite alternate-reverse;
+}
+
+@keyframes animate {
+  from {
+    stroke-dashoffset: 0;
+  }
+  to {
+    stroke-dashoffset: 12433.8193359375;
+  }
 }
